--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
     "prettier": "2.4.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   },
